--- a/prms.web/Views/Shared/_Header.cshtml
+++ b/prms.web/Views/Shared/_Header.cshtml
@@ -125,10 +125,10 @@
                         </li>
                         <li class="user-footer">
                             <div class="pull-left">
-                                <a href="@Url.Action("LogOff","Account")" class="btn btn-default btn-flat">Profile</a>
+                                <a href="#" class="btn btn-default btn-flat">Profile</a>
                             </div>
                             <div class="pull-right">
-                                <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                                <a href="@Url.Action("LogOff","Account")" class="btn btn-default btn-flat">Sign out</a>
                             </div>
                         </li>
                     </ul>
